Readd the Headers and Spacing Fixes

--- a/Data/Sys/GameSettings/GP6E01.ini
+++ b/Data/Sys/GameSettings/GP6E01.ini
@@ -1,7 +1,11 @@
+# GP6E01 - Mario Party 6
+
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
+
 [OnFrame]
 # Add memory patches to be applied every frame here.
+
 [Gecko]
 $QOL - Faster Boot Time [gamemasterplc]
 204cdc74 386003e8
@@ -15,6 +19,7 @@ e2000001 80008000
 044CCE7C 3BC00DB6
 E2000001 80008000
 *This cheat disables the screens that show before the game boots.
+
 $QOL - Increased Board Speed [gamemasterplc]
 041556d4 7d170e70
 042c31b4 41f00000
@@ -26,6 +31,7 @@ $QOL - Increased Board Speed [gamemasterplc]
 e2000001 80008000
 042c3e94 42200000
 *This cheat makes the players move faster while playing a Mario Party board.
+
 $QOL - Increased Coin Gain/Loss Speed [gamemasterplc]
 c21c28bc 00000002
 801f0020 38800002
@@ -34,6 +40,7 @@ c21c245c 00000002
 801f0020 38800002
 7c0027d6 00000000
 *This cheat makes the coin animation appear faster then the stock animation.
+
 $QOL - Increased Orb Throwing Speed [gamemasterplc]
 c21c28bc 00000002
 801f0020 38800002
@@ -41,17 +48,21 @@ c21c28bc 00000002
 c21c245c 00000002
 801f0020 38800002
 *This cheat makes orbs appear to be thrown faster.
+
 $QOL - Increased Taunt Capabilities [gamemasterplc]
 0420526c 60000000
 0420518c 60000000
 0420516c 60000000
 *This cheat makes it so you can taunt during your turn.
+
 $QOL - Instant Text Display [gamemasterplc]
 0404f51c 38000000
 *This cheat makes it so text is displayed instantly.
+
 $Bonus - Kill Background Music [Ralf]
 042c02a4 00000001
 *This cheat makes it so all in-game music will be turned off.
+
 $QOL - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
 c20456d4 00000002
 807f0050 906d0000
@@ -70,6 +81,7 @@ c203e1fc 0000000c
 7ce903a6 4e800421
 57a0083c 00000000
 *This cheat will display a number on the pause screen of a minigame to see which port paused it
+
 $QOL - Super Fast Text Boxes [CrankySupertoon]
 F6000002 80008180
 A81F01A0 7C001838
@@ -77,6 +89,7 @@ A81F01A0 7C001838
 1400000C 60000000
 E0000000 80008000
 *This cheat makes the Text Boxes Automatically Advance
+
 $Bonus - Free Stars [gamemasterplc]
 0418333c 2c030000
 0418342c 2c030000
@@ -91,6 +104,7 @@ c2183590 00000002
 044db9dc 38800000
 e2000001 80008000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
+
 $Bonus - Random Music [gamemasterplc]
 c214427c 00000004
 7c7d1b78 3860006e
@@ -99,6 +113,7 @@ c214427c 00000004
 7c7d1b78 00000000
 *This cheat makes the music selection totally random.
 *May make getting a star take longer then usual.
+
 $Bonus - Snowflake Lake - Chomps Sell Stars (40 Coins), Players Start with 0 Stars [gamemasterplc]
 0418040c 480000f0
 204cadfc 48001595
@@ -144,6 +159,7 @@ c24cc390 00000021
 044cb09c 480000a0
 e2000001 80008000
 *This cheat makes Snowflake Lake work differently.
+
 $Bonus - Unfair Mario Party [CrankySupertoon, gamemasterplc, Celerizer, Mega, Ralf]
 0415f1e8 38800001
 0415f278 3880ffec
@@ -328,7 +344,8 @@ c2183590 00000002
 *41 Coin Stars
 *1-3 Dice Sluggish
 *
-*And a lot of Minigame Replacements to Screw with your RNG
+*And a lot of Minigame Replacements to mess with your RNG
+
 $Bonus - Warping Frenzy
 00265755 00000005
 00265756 000000FF
@@ -343,62 +360,77 @@ $Bonus - Warping Frenzy
 00265A6E 000000FF
 00265A6F 000000FF
 *Warping Frenzy is a custom game mode for Mario Party that makes it so you always and only have Warp Pipes in your inventory and you can choose to warp on ones turn.
+
 $Game Mechanics - Always Day [Ralf]
 02265b80  00000000
 *This cheat makes it never be Nightime
+
 $Game Mechanics - Always Night [Ralf]
 02265b80  00004000
 *This cheat makes it never be Daytime
+
 $Game Mechanics - Battle Coins Do not Affect Mini-Game Star [gamemasterplc]
 204cddc8 b003001e
 044cddc4 60000000
 e2000001 80008000
 *This cheat makes battle minigames not count towards the Mini-Game Star.
+
 $Game Mechanics: Last 5 Turns Event Is Always x3 Coins on Spaces
 04202314 38000000
 *Makes the Last 5 Turns Event always be x3 Coins on Spaces
+
 $Game Mechanics: Last 5 Turns Event Is Always 40 Coin Bonus
 04202314 38000001
 *Makes the Last 5 Turns Event always be a 40 coin bonus for last place
+
 $Game Mechanics: Last 5 Turns Event Is Always 5 Character Spaces
 04202314 38000002
 *Makes the Last 5 Turns Event always be 5 extra character spaces for last place
+
 $Game Mechanics: Last 5 Turns Event Is Always Bowser Revolution
 04202314 38000003
 *Makes the Last 5 Turns Event always be a Bowser Revolution
 *This makes everyones coins equal
+
 $Game Mechanics - Same Space Duels Always Active [Ralf]
 04154348  60000000
 *This cheat makes duels always happen if you are on the same space
+
 $Game Mechanics - Sluggish Shroom Rolls 1-5 [gamemasterplc]
 04186608 38000005
 04186b80 4bfffff8
 *This cheat makes this orb a little more balanced.
+
 $Minigame - Dizzy Rotisserie: Lower Starting Time [gamemasterplc]
 204f3f84 38800708
 044f3f84 388004b0
 e2000001 80008000
 *By default, Dizzy Rotisseries timer is 30 seconds.
+
 $Minigame - Mass Meteor: Ties are Always Ties [gamemasterplc]
 204cf648 4082005c
 044cf648 4800005c
 e2000001 80008000
 *By default, Mass Meteor duels in Party Mode will declare a random victor if both players tie.
+
 $Minigame - Mole it All: All Moles Worth 3 Points [gamemasterplc]
 204d57f0 a8a10008
 044d57f0 38a00003
 e2000001 80008000
 *This cheat makes it so Mole it All is more balanced.
+
 $Minigame - Sink or Swim: Infinite Air [gamemasterplc]
 204cf1a4 3803ffff
 044cf1a4 38000258
 e2000001 80008000
 *This cheat makes it so Sink or Swim is more balanced.
+
 $Minigame - Trap Ease Artist: All Goombas Worth 1 Point [gamemasterplc]
 204d3128 38000003
 044d3128 38000001
 e2000001 80008000
 *This cheat makes it so Trap Ease Artist is more balanced.
+
 $Minigame - Treasure Trawlers: All Scavenged Items are Regular Chests [gamemasterplc]
 20501374 e3e100a8
 c24fc478 00000003
@@ -407,42 +439,52 @@ c24fc478 00000003
 60000000 00000000
 e2000001 80008000
 *This cheat makes it so Treasure Trawlers is more balanced.
+
 $Minigame Replacement - Crate and Peril ➜ Snow Brawl [gamemasterplc]
 28265ba8  0000001f
 02265ba8  00000019
 e2000001  80008000
+
 $Minigame Replacement - Insectiride ➜ Hyper Sniper [gamemasterplc]
 28265ba8  0000002e
 02265ba8  0000002d
 e2000001  80008000
+
 $Minigame Replacement - Odd Card Out ➜ What Goes Up... [gamemasterplc]
 28265ba8 00000001
 02265ba8 00000003
 e2000001 80008000
+
 $Minigame Replacement - Pitifall ➜ Cog Jog [gamemasterplc]
 28265ba8 00000036
 02265ba8 00000017
 e2000001 8000800
+
 $Minigame Replacement - Pixel Perfect ➜ Light Breeze [gamemasterplc]
 28265ba8 00000023
 02265ba8 00000026
 e2000001 80008000
+
 $Minigame Replacement - Ray of Fright ➜ Conveyor Bolt [gamemasterplc]
 28265ba8  00000020
 02265ba8  0000001e
 e2000001  80008000
+
 $Minigame Replacement - Slot Trot ➜ Clean Team [gamemasterplc]
 28265ba8 00000024
 02265ba8 0000002C
 e2000001 80008000
+
 $Minigame Replacement - Trap Ease Artist ➜ Pokey Punch-out [gamemasterplc]
 28265ba8  00000013
 02265ba8  00000014
 e2000001  80008000
+
 $Minigame Replacement - Trick or Tree ➜ Boo Off the Stage [gamemasterplc]
 28265ba8 0000003d
 02265ba8 0000003b
 e2000001 80008000
+
 $Minigame Replacement - Tricky Tires ➜ Cannonball Fun [gamemasterplc]
 28265ba8 00000009
 02265ba8 0000000d
