--- a/Data/Sys/GameSettings/GP7E01.ini
+++ b/Data/Sys/GameSettings/GP7E01.ini
@@ -1,15 +1,21 @@
+# GP7E01 - Mario Party 7
+
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
+
 [OnFrame]
 # Add memory patches to be applied every frame here.
 [ActionReplay]
 $Infinite Mileage
 02510C6A 0000C350
+
 $Unlock All Minigames
 02291804 0005FFFF
+
 $Unlock all Souvieners
 002922F8 000001FF
 002922FD 000002FF
+
 $Unlock All Sounds
 002922FA 000001FF
 
@@ -31,6 +37,7 @@ e2000001 80008000
 044e879c 60000000
 e2000001 80008000
 *Use This Cheat to Get into the Action Faster
+
 $QOL - Increased Board Speed [gamemasterplc]
 041604b0 38c0000a
 204e317c 281e000c
@@ -41,20 +48,25 @@ $QOL - Increased Board Speed [gamemasterplc]
 044e3844 3bde0002
 e2000001 80008000
 *This cheat makes the players move faster while playing a Mario Party board.
+
 $QOL - Increased Orb Throwing Speed [gamemasterplc]
 041e3110 38030002
 *This cheat makes orbs appear to be thrown faster.
+
 $QOL - Increased Taunt Capabilities [gamemasterplc]
 04235abc 60000000
 04235b0c 60000000
 04235b90 60000000
 *This cheat makes it so you can taunt during your turn.
+
 $QOL - Instant Text Display [gamemasterplc]
 04050a70 38800000
 *This cheat makes it so text is displayed instantly.
+
 $Bonus - Kill Background Music [Ralf]
 0414aaf0 4e800020
 *This cheat makes it so all in-game music will be turned off.
+
 $QOL - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
 c2047400 00000002
 807f0050 906d0000
@@ -73,9 +85,11 @@ c20402fc 0000000c
 7ce903a6 4e800421
 57a0083c 00000000
 *This cheat will display a number on the pause screen of a minigame to see which port paused it.
+
 $QOL - Super Fast Text Boxes [Ralf]
 04050ddc 60000000
 *This cheat makes the Text Boxes Automatically Advance
+
 $Board - Neon Heights: Balance Changes [gamemasterplc]
 204e0f0c 7c9e2378
 044e0bac 38a00014
@@ -87,17 +101,20 @@ $Board - Neon Heights: Balance Changes [gamemasterplc]
 044e269c 3b000014
 e2000001 80008000
 *This cheat makes the chests now cost 20 coins, and Bob-omb/nothing chests now contain 20 coins.
+
 $Board - Neon Heights: Bowser Path for Free [gamemasterplc]
 204fdef4 2c03000a
 044fdef4 2c030000
 044fdf5c 38a00000
 e2000001 80008000
 *This cheat makes that path Koopa Kid is blocking not cost any coins to traverse.
+
 $Board - Pagoda Peak: Bottle Rocket Launch Always Succeeds [gamemasterplc]
 204df8a0 2803004b
 044df8a4 60000000
 e2000001 80008000
 *This cheat makes the Pagoda Peak bottle rocket always go towards the top.
+
 $Board - Pyramid Park: Free Chomp Rides [gamemasterplc]
 204e10b4 7c03d000
 044e10b0 386003e7
@@ -106,12 +123,14 @@ $Board - Pyramid Park: Free Chomp Rides [gamemasterplc]
 044e17a4 38a00000
 e2000001 80008000
 *This cheat makes the Pyramid Park Chain Chomps free.
+
 $Board - Windmillville: Free Flower Glider [gamemasterplc]
 204e1f00 7c600734
 044e1efc 386003e7
 044e7d10 38a00000
 e2000001 80008000
 *This cheat makes the Windmillville flower glider free assumbing you have more the 10 coins.
+
 $Bonus - Free Stars [gamemasterplc]
 04188774 3b800000
 0418876c 3b800000
@@ -124,9 +143,11 @@ e2000001 80008000
 044f690c 38600000
 e2000001 80008000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
+
 $Bonus - Orbs Can Only Be Placed On Your Current Space [gamemasterplc]
 041e7128 60000000
 *This cheat makes it so Orbs are most balanced. To be fair a human cannot throw that far.
+
 $Bonus - Pyramid Park: Chomps Sell Stars, Players Start with 0 Stars
 204ddf34  4180ffb8
 044ddee0  48000058
@@ -183,6 +204,7 @@ c24e0f2c  00000032
 60000000  00000000
 e2000001  80008000
 *This cheat makes Pyramid Park work differently.
+
 $Bonus - Unfair Mario Party [CrankySupertoon, gamemasterplc, Ralf]
 04168578 60000000
 0416857c 38800001
@@ -321,7 +343,8 @@ e2000001 80008000
 *Multiple Orbs in the Same Turn
 *Never Possible to Roll The Same Number with the Mushroom
 *
-*And a Stupid Ton of Minigame Replacements to Screw with your RNG
+*And a Stupid Ton of Minigame Replacements to mess with your RNG
+
 $Game Mechanics - All Character Orbs Are Fireball Orb [Ralf]
 041ee17c  38600000
 041ee23c  48000014
@@ -340,10 +363,12 @@ $Game Mechanics - All Character Orbs Are Fireball Orb [Ralf]
 041f623c  60000000
 041f6240  2c000020
 041f6248  48000050
+
 $Game Mechanics - Always Bowser Time [Ralf]
 00291524  00000038
 *WARNING!
 *This can make the game last an Extra Hour
+
 $Game Mechanics - Battle Coins Do not Affect Mini-Game Star [gamemasterplc]
 204e628c 7c080734
 c24e6288 00000006
@@ -355,6 +380,7 @@ c24e6288 00000006
 7c051a14 00000000
 e2000001 80008000
 *This cheat makes battle minigames not count towards the Mini-Game Star.
+
 $Game Mechanics - Able To Hold 5 Orbs [Ralf]
 041675b8 38600005
 04167604 3ba00005
@@ -364,11 +390,13 @@ $Game Mechanics - Able To Hold 5 Orbs [Ralf]
 04167b80 38e00005
 04167ca8 39600005
 041935fc 48000034
+
 $Game Mechanics - Disable Bowser Time [gamemasterplc]
 c2152080 00000002
 38000000 9803000c
 60000000 00000000
 *This cheat makes it so the Bowser Time game event does not appear. This can save 5-20 minutes of Board Events on boards such as Grand Canal, but break boards such as Bowser's Enchanted Inferno.
+
 $Game Mechanics - Disable Character Orbs [gamemasterplc]
 042f12e8 00000000
 042f12a8 00000000
@@ -377,22 +405,27 @@ $Game Mechanics - Disable Character Orbs [gamemasterplc]
 042f1328 00000000
 042f1348 00000000
 *This cheat makes it so character orbs (the blue ones) do not appear.
+
 $Game Mechanics - Disable Mic Spaces [gamemasterplc]
 0417afd0 60000000
 *This cheat makes Mic Spaces act like the Green Spaces from Mario Party 9. This means that they do nothing. This does however save time with the Disable Microphone cheat on, so the transition screen does not appear.
+
 $Game Mechanics - DK and Bowser Give Only Multiplayer Games [gamemasterplc]
 041d19a0 3b600004
 041d5058 3b200005
 *This cheat makes it so DK and Bowser only give multiplayer minigames which are inclusive and not stupidly broken.
+
 $Game Mechanics - Force Mini-Game/Orb/Happening Bonus Stars [gamemasterplc]
 204e4ae0 48000210
 044e4a38 48000014
 044e4a6c 38000000
 e2000001 80008000
 *This cheat makes the Bonus Stars always the same.
+
 $Game Mechanics - Hammer Bro Orbs Steal 20 Coins [Ralf]
 041A902C 3AC00014
 041A9A28 38A0FFEC
+
 $Game Mechanics - Koopa Kid Orbs Can Be Purchased [gamemasterplc]
 0419eb0c 48000024
 04274adc 00000001
@@ -405,79 +438,101 @@ $Game Mechanics - Koopa Kid Orbs Can Be Purchased [gamemasterplc]
 481e5098 00000000
 041e991c 4be1af44
 *This cheat makes Koopa Kid Orbs findable in stores as well as the Orb spawn spots on the board.
+
 $Mechanics: Last 5 Turns Event Is Always x3 Coins on Spaces
 042311A8 38000000
+
 $Mechanics: Last 5 Turns Event Is Always 10 More Koopa Kid Spaces
 042311A8 38000001
+
 $Mechanics: Last 5 Turns Event Is Always 40 Coin Bonus
 042311A8 38000002
+
 $Mechanics: Last 5 Turns Event Is Always Stars are 10 Coins
 042311A8 38000003
+
 $Mechanics: Last 5 Turns Event Is Always Red Spaces are Bowser Spaces
 042311A8 38000004
+
 $Mechanics: Last 5 Turns Event Is Always Chain Chomp Ride for 5 Coins (Pyramid Park)
 042311A8 38000005
 *Only use on Pyramid Park
+
 $Game Mechanics - Mic Minigames Have A 10% Chance Of Appearing Instead Of 20% [gamemasterplc]
 042f7a04 41200000
 *This cheat makes it so you see less Mic Minigames and see more standard minigames.
+
 $Game Mechanics - Microphone Always Off [gamemasterplc]
 04098fc4 3800002c
 04098fc8 980317e6
 04098fcc 38600000
 *This cheat makes the microphone game setting stay off while playing Mario Party 7.
+
 $Game Mechanics - Replace "Nothing" Duel Result With "Half Coins" [gamemasterplc]
 c21d8ed0 00000003
 2c030003 40820008
 38600001 7c711b78
 60000000 00000000
 *This cheat makes it so duels don't end in a dud.
+
 $Game Mechanics - Slow 'Shroom Orb Rolls 1-5 [gamemasterplc]
 0418ccc8 38000005
 0418d1ac 40820020
 *This cheat makes this orb a little more balanced.
+
 $Game Mechanics - Use Multiple Orbs in the Same Turn [CrankySupertoon]
 041E3764 3860FFFF
+
 $Minigame Replacement - Bridge Work ➜ Mad Props
 28291558 00000034
 02291558 00000032
 e2000001 80008000
+
 $Minigame Replacement - Cointagious ➜ Take Me Ohm
 28291558 00000004
 02291558 0000000c
 e2000001 80008000
+
 $Minigame Replacement - Fish & Cheeps ➜ Weight for It
 28291558 0000003c
 02291558 0000002e
 e2000001 80008000
+
 $Minigame Replacement - Flashfright ➜ Think Tank
 28291558 00000019
 02291558 00000018
 e2000001 80008000
+
 $Minigame Replacement - Gimme a Sign ➜ Royal Rumpus
 28291558 00000033
 02291558 00000039
 e2000001 80008000
+
 $Minigame Replacement - La Bomba ➜ Easy Pickings
 28291558 00000014
 02291558 0000001b
 e2000001 80008000
+
 $Minigame Replacement - Light Speed ➜ Camp Ukiki
 28291558 0000003a
 02291558 0000003d
 e2000001 80008000
+
 $Minigame Replacement - Spin Doctor ➜ Hip Hop Drop
 28291558 00000035
 02291558 00000036
 e2000001 80008000
+
 $Minigame Replacement - Warp Pipe Dreams ➜ Apes of Wrath
 28291558 00000031
 02291558 00000038
 e2000001 80008000
+
 $Minigame Replacement: - Pogo-a-Go-Go ➜ Balloonatic
 28291558  00000020
 02291558  00000016
 e2000001  80008000
+
 $Miscellaneous - Replace Daisy with DK [Ralf]
 057faff0 4a0cd430
 057faff4 00082754
@@ -493,6 +548,7 @@ $Miscellaneous - Replace Daisy with DK [Ralf]
 057fb030 000c8c62
 *This cheat safely swaps Daisy's Model with DK's This cheat makes DK a super glitchy playable character.
 *Some board events break like the Shooting in Neon Heights
+
 $Miscellaneous - Replace Daisy with Koopa Kid [Ralf]
 057fafe4 4bebd7a8
 057fafe8 001bb312
@@ -509,6 +565,7 @@ $Miscellaneous - Replace Daisy with Koopa Kid [Ralf]
 057fb02c 4c224878
 057fb030 00052266
 *This cheat safely swaps Daisy's Model with Koopa Kid's. This cheat makes Koopa Kid a playable character.
+
 $Miscellaneous - Replace Peach with DK
 057fb8d8 4a0cd430
 057fb8dc 00082754
@@ -524,6 +581,7 @@ $Miscellaneous - Replace Peach with DK
 057fb918 000c8c62
 *This cheat safely swaps Peach's Model with DK's This cheat makes DK a super glitchy playable character.
 *Some board events break like the Shooting in Neon Heights
+
 $Miscellaneous - Replace Peach With Koopa Kid [Ralf]
 057FB8CC 4BEBD7A8
 057FB8D0 001BB312
@@ -540,6 +598,7 @@ $Miscellaneous - Replace Peach With Koopa Kid [Ralf]
 057FB914 4C224878
 057FB918 00052266
 *This cheat safely swaps Peach's Model with Koopa Kid's. This cheat makes Koopa Kid a playable character.
+
 $Miscellaneous - Widescreen [gamemasterplc]
 200018a8 9421ff58
 c60a07e0 800018a8
