--- a/Data/Sys/GameSettings/RM8E01.ini
+++ b/Data/Sys/GameSettings/RM8E01.ini
@@ -1,7 +1,11 @@
+# RM8E01 - Mario Party 8
+
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
+
 [OnFrame]
 # Add memory patches to be applied every frame here.
+
 [Gecko]
 $QOL - Faster Boot Time [Celerizer]
 20744de4 a003de20
@@ -11,7 +15,7 @@ e2000001 80008000
 04741c48 60000000
 04741c14 60000000
 e2000001 80008000
-*
+
 $QOL: GC Controller Mod - IR on Left Stick + GC Controller Minigame Replacements
 04106A24 83DE6404
 04106A28 60000000
@@ -24,6 +28,7 @@ e2000001 80008000
 *Replaces the following minigames:
 *Punch a Bunch -> Mosh Pit Playroom
 *In the Nick of Time -> Lava or Leave 'Em
+
 $QOL - Increased Board Speed [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -152,6 +157,7 @@ de000000 80008180
 1415cd04 3b9c0002
 e0000000 80008000
 *This cheat makes the players move faster while playing a Mario Party board.
+
 $QOL - Increased Taunt Capabilities [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -196,15 +202,18 @@ de000000 80008180
 1409c00c 60000000
 e0000000 80008000
 *This cheat makes it so you can taunt during your turn.
+
 $QOL - Minigame Crash Fix - Breakneck Building ➜ Rotation Station
 282287cc 00000032
 022287cc 0000003a
 e2000001 80008000
 *WARNING!
 *This game can CRASH Dolphin. Please Enable This
+
 $QOL - Super Fast Text Boxes [CrankySupertoon]
 0405DED4 60000000
 *This cheat makes the Text Boxes Automatically Advance
+
 $Board - DK's Treetop Temple: Free Cannon [CrankySupertoon]
 48000000 800030c8
 de000000 80008180
@@ -213,11 +222,13 @@ de000000 80008180
 1401a160 2c040000
 e0000000 80008000
 *This cheat makes the cannon in DK's Treetop Temple Free
+
 $Board - Goomba's Booty Boardwalk: Remove Dolphin Shuttles [gamemasterplc]
 2057bc40 437f0000
 0457bc3c 42700000
 e2000001 80008000
 *This cheat makes Goomba's Booty Boardwalk a long teadious path.
+
 $Board - King Boo's Haunted Hideaway: Make the Whomp Toll Free [CrankySupertoon]
 48000000 800030c8
 de000000 80008180
@@ -225,9 +236,11 @@ de000000 80008180
 1403f0dc 60000000
 1403f04c 2c03000a
 e0000000 80008000
+
 $Board - King Boo's Haunted Hideaway: Map Always Revealed [gamemasterplc]
 042287bc ffffffff
 *This cheat makes King Boo's Haunted Hideaway Mansion not that secret.
+
 $Bonus - Free Stars [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -247,15 +260,18 @@ de000000 80008180
 1401e604 38600000
 e0000000 80008000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
+
 $Bonus - Kill Music [gamemasterplc]
 042CE168 00000001
 0404D9FC 60000000
+
 $Bonus - Warping Frenzy [CrankySupertoon]
 c20457a8 00000003
 380004ff 90040008
 b0040006 4e800020
 60000000 00000000
 *Chaotic Warping during your turns. Can only pick from a Springo Candy or your Dice. Everything else is Disabled
+
 $Game Mechanics: Able to Hold Five Candies [gamemasterplc]
 48000000 800030C8
 DE000000 80008180
@@ -293,7 +309,7 @@ DE000000 80008180
 1409B578 60000000
 1409B5AC 60000000
 E0000000 80008000
-*
+
 $Game Mechanics - Cashzap Candy Steals Coins [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -356,6 +372,7 @@ d210987c 00000005
 907f01a8 00000000
 e0000000 80008000
 *This cheat makes the Cashzap Candy steal coins rather then destroying.
+
 $Game Mechanics - Disable Duelo Candy [CrankySupertoon, Rain, jdaster]
 c0000000 00000010
 3821ffdc 90610010
@@ -375,6 +392,7 @@ c0000000 00000010
 80e10020 38210024
 4e800020 00000000
 *Replaces Duelo Candy with Twice Candy
+
 $Game Mechanics - Disable Lucky Spaces [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -407,6 +425,7 @@ de000000 80008180
 1401077c 4e800020
 e0000000 80008000
 *This cheat disables the overpowered Lucky Spaces.
+
 $Game Mechanics - Disable Slogo Candy [CrankySupertoon, Rain, jdaster]
 c0000000 00000010
 3821ffdc 90610010
@@ -426,6 +445,7 @@ c0000000 00000010
 80e10020 38210024
 4e800020 00000000
 *Replaces Slogo Candy with Twice Candy
+
 $Game Mechanics - Force Mini-Game/Candy/Happening Bonus Stars [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -433,6 +453,7 @@ de000000 80008180
 14006c94 48000014
 e0000000 80008000
 *This cheat makes the Bonus Stars always the same.
+
 $Game Mechanics - No 1 or 5 Coin Duel Rewards [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -471,6 +492,7 @@ de000000 80008180
 1416c6c4 3860000a
 e0000000 80008000
 *This cheat makes duels not steal very few coins.
+
 $Game Mechanics - Thwomp Candy Steals Coins [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -533,6 +555,7 @@ d216103c 00000005
 901f0180 00000000
 e0000000 80008000
 *This cheat makes the Thwomp Candy Steals coins rather then Destroying
+
 $Minigame - Attention Grabber: Ship is 5000 Units Away [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -540,6 +563,7 @@ de000000 80008180
 140091d4 459c4000
 e0000000 80008000
 *This cheat makes it so Attention Grabber is more balanced
+
 $Minigame - Cosmic Slalom: Infinite Boosts [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -547,6 +571,7 @@ de000000 80008180
 14012d54 38030000
 e0000000 80008000
 *This cheat makes it so Cosmic Slalom is more balanced
+
 $Minigame - Lob to Rob: All Targets Worth 30 Points [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -554,6 +579,7 @@ de000000 80008180
 1400cbd4 3800001e
 e0000000 80008000
 *This cheat makes it so Lob to Rob is more balanced
+
 $Minigame - Rudder Madness: Double Rudder Speed [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -564,6 +590,7 @@ c3ff0060 ec1f0032
 efe1002a 00000000
 e0000000 80008000
 *This cheat makes it so Rudder Madness is more balanced
+
 $Minigame - Surfs Way Up: All Targets Worth 100 Points [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -571,35 +598,42 @@ de000000 80008180
 1400b348 3ba00064
 e0000000 80008000
 *This cheat makes it so Surfs Way Up is more balanced
+
 $Minigame Replacement - Bob-ombs Away ➜ Power Trip
 282287CC 00000012
 022287CC 00000011
 E2000001 80008000
+
 $Minigame Replacement - Cardiators ➜ Frozen Assets
 282287CC 00000039
 022287CC 00000031
 E2000001 80008000
+
 $Minigame Replacement - Cut from the Team ➜ Snipe for the Picking
 282287CC 00000024
 022287CC 00000025
 E2000001 80008000
+
 $Minigame Replacement - Glacial Meltdown ➜ Saucer Swarm
 282287CC 00000027
 022287CC 00000026
 E2000001 80008000
+
 $Minigame Replacement - Mario Matrix ➜ Sick and Twisted
 282287cc 00000007
 022287cc 00000018
 e2000001 80008000
-*
+
 $Minigame Replacement - Specter Inspector ➜ Loco Motives
 282287CC 00000030
 022287CC 0000002F
 E2000001 80008000
+
 $Minigame Replacement - Thrash 'n' Crash ➜ Swervin' Skies
 282287CC 00000016
 022287CC 00000013
 E2000001 80008000
+
 $Minigame Replacement - You're the Bob-omb ➜ Lava Lobbers
 282287CC 00000037
 022287CC 0000002E
