--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
-      - run: ./Tools/lint.sh ${{ github.sha }}
+      - run: ./Tools/lint.sh
 
