--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Lint
         run: | 
+          ls -al
           echo ::set-env name=base_commit::$(git rev-parse ${{ github.base_ref }})
-          echo ${{ env.base_commit }}
-          ./Tools/lint.sh $(git rev-parse ${{ github.base_ref }})
+          echo "basecommit ${{ env.base_commit }}"
+          ./Tools/lint.sh ${{ env.base_commit }}
       
