--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Lint
         run: | 
-          git fetch origin ${{ github.base_ref }})
+          git fetch origin ${{ github.base_ref }}
           echo ::set-env name=base_commit::$(git rev-parse origin/${{ github.base_ref }})
           echo "basecommit ${{ env.base_commit }}"
           ./Tools/lint.sh ${{ env.base_commit }}
