--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Lint
         run: | 
           git fetch origin ${{ github.base_ref }}
-          git rev-parse ${{ github.base_ref }}
-          echo ::set-env name=base_commit::$(git rev-parse ${{ github.base_ref }})
+          git rev-parse origin/${{ github.base_ref }}
+          echo ::set-env name=base_commit::$(git rev-parse origin/${{ github.base_ref }})
           echo "basecommit ${{ env.base_commit }}"
           ./Tools/lint.sh ${{ env.base_commit }}
       
