--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,8 +16,6 @@ jobs:
       - name: Lint
         run: | 
           git fetch origin ${{ github.base_ref }}
-          git rev-parse origin/${{ github.base_ref }}
-          echo ::set-env name=base_commit::$(git rev-parse origin/${{ github.base_ref }})
-          echo "basecommit ${{ env.base_commit }}"
+          echo "sha ${{ github.sha }}"
           ./Tools/lint.sh $(git rev-parse origin/${{ github.base_ref }})...
       
