--- a/Source/Core/DolphinQt/Entitlements.plist
+++ b/Source/Core/DolphinQt/Entitlements.plist
@@ -3,13 +3,16 @@
 <plist version="1.0">
 <dict>
   <!-- TODO: Dolphin needs JIT, but doesn't use MAP_JIT yet -->
-	<key>com.apple.security.cs.allow-jit</key>
-	<true/>
+  <key>com.apple.security.cs.allow-jit</key>
+  <true/>
   <!-- Since we don't use MAP_JIT, we need this so we can allocate executable memory -->
-	<key>com.apple.security.cs.allow-unsigned-executable-memory</key>
-	<true/>
+  <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+  <true/>
   <!-- Needed so for GameCube microphone emulation -->
-	<key>com.apple.security.device.audio-input</key>
-	<true/>
+  <key>com.apple.security.device.audio-input</key>
+  <true/>
+  <!-- TODO: What is using AppleEvents? -->
+  <key>com.apple.security.automation.apple-events</key>
+  <true/>
 </dict>
 </plist>
