--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,8 @@ endif()
 if(APPLE)
   option(MACOS_USE_DEFAULT_SEARCH_PATH "Don't prioritize system library paths" OFF)
   option(MACOS_CODE_SIGNING "Enable codesigning" OFF)
-  set(MACOS_CODE_SIGNING_IDENTITY "The identity used for codesigning." CACHE STRING "")
+  set(MACOS_CODE_SIGNING_IDENTITY "" CACHE STRING "The identity used for codesigning.")
+  set(MACOS_CODE_SIGNING_IDENTITY_UPDATER "" CACHE STRING "The identity used for codesigning, for the updater.")
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
